Update AsyncExecutor, Update GlobalExceptionHandler, some small fixes